# couchbase-lite-C

./: .gitignore  .gitmodules  CMakeLists.txt  EMSCRIPTEN.md  package-lock.json  package.json
cmake/: platform_emscripten.cmake
scripts/: build_emscripten.sh
src/: CBLDocument_Internal.hh  CBLQuery_Internal.hh  CBLReplicator_Internal.hh  CBL_JSAPI.cc  CBL_JSAPI.js  Internal.cc  WebWebSocket.cc  WebWebSocket.hh
test/: CMakeLists.txt
test/js/: DatabaseTest.mjs
test/js/support/: Allocator.mjs  DatabaseUtils.mjs  ErrorUtils.mjs  FleeceUtils.mjs  Globals.mjs  Logging.mjs
